--- a/presentation/Weak.lyx
+++ b/presentation/Weak.lyx
@@ -737,5 +737,198 @@ end{frame}
 
 \end_layout
 
+\begin_layout EndFrame
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{frame}[fragile] 
+\backslash
+frametitle{Element forces}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Formula $f=\nabla\sigma$
+\end_inset
+
+ 
+\begin_inset space \qquad{}
+\end_inset
+
+ 
+\begin_inset Formula $\Rightarrow$
+\end_inset
+
+ 
+\begin_inset space \qquad{}
+\end_inset
+
+ in 2 dim 
+\begin_inset Formula $f=\left(\begin{array}{c}
+\partial_{x}\sigma_{11}+\partial_{y}\sigma_{21}\\
+\partial_{x}\sigma_{12}+\partial_{y}\sigma_{22}
+\end{array}\right)$
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+Vh fx = dx(T[0][0])+dy(T[1][0])
+\end_layout
+
+\begin_layout Plain Layout
+
+Vh fy = dx(T[0][1])+dy(T[1][1])
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+Erratic, inconsistent behaviour!
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{frame}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+begin{frame}[fragile] 
+\backslash
+frametitle{Element forces}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset listings
+inline false
+status open
+
+\begin_layout Plain Layout
+
+Vh fx = - EPS[0][0]*dxx(phi)*dx(phi) - EPS[1][1]*dyx(phi)*dy(phi)
+\end_layout
+
+\begin_layout Plain Layout
+
+        + 1/2*(EPS[1][0] - EPS[0][1])
+\end_layout
+
+\begin_layout Plain Layout
+
+             *( dx(phi)*dyx(phi) + dxx(phi)*dy(phi) )
+\end_layout
+
+\begin_layout Plain Layout
+
+        - EPS[0][0]*(dyy(phi)*dx(phi)+dy(phi)*dyx(phi))
+\end_layout
+
+\begin_layout Plain Layout
+
+        - EPS[0][1]*(2*dyy(phi)*dy(phi));
+\end_layout
+
+\begin_layout Plain Layout
+
+Vh fy = - EPS[1][0]*(dxx(phi)*dx(phi)*2)
+\end_layout
+
+\begin_layout Plain Layout
+
+        - EPS[1][1]*(dxx(phi)*dy(phi)+dx(phi)*dxy(phi))
+\end_layout
+
+\begin_layout Plain Layout
+
+        + EPS[0][0]*dx(phi)*dyx(phi) - EPS[1][1]*dy(phi)*dyy(phi)
+\end_layout
+
+\begin_layout Plain Layout
+
+        + 1/2*(EPS[0][1] - EPS[1][0])
+\end_layout
+
+\begin_layout Plain Layout
+
+             *( dx(phi)*dyy(phi) + dyx(phi)*dy(phi) );
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset Graphics
+	filename images/dmul_improvement.png
+	lyxscale 20
+	scale 16
+
+\end_inset
+
+
+\end_layout
+
+\begin_layout Standard
+\begin_inset ERT
+status open
+
+\begin_layout Plain Layout
+
+
+\backslash
+end{frame}
+\end_layout
+
+\end_inset
+
+
+\end_layout
+
 \end_body
 \end_document
