--- a/presentation/Weak.lyx
+++ b/presentation/Weak.lyx
@@ -741,6 +741,10 @@ end{frame}
 
 \end_layout
 
+\begin_layout Subsection
+Force calculation
+\end_layout
+
 \begin_layout Standard
 \begin_inset ERT
 status open
