--- a/presentation/MAIN.lyx
+++ b/presentation/MAIN.lyx
@@ -292,7 +292,7 @@ filename "Introduction.lyx"
 status open
 
 \begin_layout Plain Layout
-Basic overview
+Basic overview + strensor
 \end_layout
 
 \end_inset
