--- a/presentation/Weak.lyx
+++ b/presentation/Weak.lyx
@@ -101,11 +101,11 @@
 \begin_body
 
 \begin_layout Section
-Weak formulation
+Implementation in FreeFEM++
 \end_layout
 
 \begin_layout Subsection
-Strong form for anisotropic Electrostatics
+Weak form for anisotropic Electrostatics
 \end_layout
 
 \begin_layout BeginFrame
