--- a/presentation/MAIN.lyx
+++ b/presentation/MAIN.lyx
@@ -140,7 +140,7 @@ Calculation of Maxwell's Stress Tensor with FreeFem++
 \begin_layout Subtitle
 
 \size normal
-Computational Electromagnetism Project
+Computational Electromagnetics Project
 \size default
  
 \begin_inset Argument
