--- a/presentation/Weak.lyx
+++ b/presentation/Weak.lyx
@@ -101,7 +101,7 @@
 \begin_body
 
 \begin_layout Section
-Implementation in FreeFEM++
+FreeFEM++ Implementation 
 \end_layout
 
 \begin_layout Subsection
